# lancedesk-terminal-copier

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  install.sh  ld.sh  uninstall.sh
.github/workflows/: ci.yml
docs/: architecture.md  distribution.md  faq.md  index.html  landing.css  launch.md  release.md  roadmap.md  security.md  team-examples.md
packaging/homebrew/: lancedesk-terminal-copier.rb
scripts/: build-release-artifacts.sh  install-release.sh  prepare-homebrew-formula.sh
tests/: clipboard_fallback_test.sh  sanitize_copy_test.sh  smoke_test.sh  state_transition_test.sh  upgrade_rollback_test.sh
wrappers/npm/: README.md  package.json
wrappers/pip/: README.md  pyproject.toml
wrappers/pip/lancedesk_terminal_copier/: cli.py
